[package]
name = "AkashaDDNS-rust"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
colored = "2.1"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
